[gd_scene load_steps=2 format=2]

[ext_resource path="res://sceny/Postava.gd" type="Script" id=1]

[node name="Postava" type="Panel"]
margin_left = 1080.0
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 5.0
margin_top = 500.0
margin_right = 195.0
margin_bottom = 715.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulek" type="Label" parent="GridContainer"]
margin_right = 75.0
margin_bottom = 14.0
text = "Postava"

[node name="GridContainer" type="GridContainer" parent="GridContainer"]
margin_top = 18.0
margin_right = 75.0
margin_bottom = 86.0
columns = 2

[node name="labXP" type="Label" parent="GridContainer/GridContainer"]
margin_right = 50.0
margin_bottom = 14.0
text = "XP: "

[node name="valXP" type="Label" parent="GridContainer/GridContainer"]
margin_left = 54.0
margin_right = 75.0
margin_bottom = 14.0
text = "0"

[node name="labHP" type="Label" parent="GridContainer/GridContainer"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0
text = "HP: "

[node name="valHP" type="Label" parent="GridContainer/GridContainer"]
margin_left = 54.0
margin_top = 18.0
margin_right = 75.0
margin_bottom = 32.0
text = "0/0"

[node name="labUC" type="Label" parent="GridContainer/GridContainer"]
margin_top = 36.0
margin_right = 50.0
margin_bottom = 50.0
text = "Ãštok:"

[node name="valUC" type="Label" parent="GridContainer/GridContainer"]
margin_left = 54.0
margin_top = 36.0
margin_right = 75.0
margin_bottom = 50.0
text = "0"

[node name="labOC" type="Label" parent="GridContainer/GridContainer"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 68.0
text = "Obrana:"

[node name="valOC" type="Label" parent="GridContainer/GridContainer"]
margin_left = 54.0
margin_top = 54.0
margin_right = 75.0
margin_bottom = 68.0
text = "0"

[node name="Zavrit" type="Button" parent="GridContainer"]
margin_top = 90.0
margin_right = 75.0
margin_bottom = 110.0
text = "Zavrit"
[connection signal="pressed" from="GridContainer/Zavrit" to="." method="_on_Zavrit_pressed"]
